--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "packages/*"
     ],
     "dependencies": {
+        "@fastify/url-data": "^5.4.0",
         "husky": "^8.0.3",
         "ilp-packet": "^2.2.0"
     },
