--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -25,7 +25,7 @@
         "start": "npm run service",
         "start:dev": "npm run build && npm run environment:dev && npm start",
         "environment:dev": "(AUDIT_KEY_FILE_PATH = ./dist/tmp_key_file) || (set AUDIT_KEY_FILE_PATH = ./dist/tmp_key_file)",
-        "service": "node dist/index.js",
+        "service": "node dist/index.js -f",
         "build": "tsc && cp api-specs/api_spec.yaml dist",
         "watch": "tsc -w",
         "clean": "(npm run clean:npm || true) && npm run clean:dist",
@@ -35,7 +35,7 @@
         "standard": "npm run lint",
         "lint": "eslint ./src",
         "lint:fix": "eslint ./src --fix",
-        "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts --runInBand",
+        "test:unit": "jest --passWithNoTests --testMatch **/test/unit/routes/bulkQuote_routes.test.ts --runInBand",
         "test:ttk-use-cases": "npx ml-ttk-cli --mode outbound --input-files=./api-specs/working_paths.json --environment-file ./api-specs/examples_environments_hub_local_environment.json --report-format html",
         "audit:resolve": "SHELL=sh resolve-audit",
         "audit:check": "SHELL=sh check-audit",
@@ -61,13 +61,19 @@
         "base64url": "^3.0.1",
         "express": "~4.18.2",
         "express-openapi-validate": "^0.6.1",
+        "fastify": "^4.26.2",
+        "fastify-formbody": "^5.3.0",
+        "fastify-oas": "^3.0.8",
+        "fastify-plugin": "^4.5.1",
         "js-yaml": "^4.1.0"
     },
     "devDependencies": {
         "@types/express": "~4.17.21",
         "@types/js-yaml": "^4.0.9",
+        "@types/node": "^20.11.27",
         "@types/supertest": "^2.0.16",
-        "jest-openapi": "^0.14.2"
+        "jest-openapi": "^0.14.2",
+        "typescript": "^5.4.2"
     },
     "engines": {
         "node": ">=20.10.0"
