--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mojaloop/interop-apis-bc-fspiop-api-svc",
-    "version": "0.5.1",
+    "version": "0.5.1_test6",
     "description": "Mojaloop vNext FSPIOP API Service",
     "license": "Apache-2.0",
     "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/packages/fspiop-api-svc",
@@ -56,12 +56,15 @@
         "@mojaloop/platform-shared-lib-public-messages-lib": "~0.5.4",
         "@mojaloop/security-bc-client-lib": "~0.5.7",
         "@mojaloop/security-bc-public-types-lib": "~0.5.5",
+        "@mojaloop/platform-shared-lib-observability-client-lib": "~0.5.1",
+        "@mojaloop/platform-shared-lib-observability-types-lib": "~0.5.2",
         "ajv": "^8.12.0",
         "axios": "^1.4.0",
         "base64url": "^3.0.1",
         "express": "~4.18.2",
         "express-openapi-validate": "^0.6.1",
-        "js-yaml": "^4.1.0"
+        "js-yaml": "^4.1.0",
+        "express-prom-bundle": "~7.0.0"
     },
     "devDependencies": {
         "@types/express": "~4.17.21",
