--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -56,6 +56,8 @@
         "@mojaloop/platform-shared-lib-public-messages-lib": "~0.5.12",
         "@mojaloop/security-bc-client-lib": "~0.5.9",
         "@mojaloop/security-bc-public-types-lib": "~0.5.6",
+        "@mojaloop/account-lookup-bc-public-types-lib": "~0.5.1",
+        "@mojaloop/quoting-bc-public-types-lib": "~0.5.1",
         "@mojaloop/transfers-bc-public-types-lib": "~0.5.2",
         "ajv": "^8.12.0",
         "axios": "^1.4.0",
