--- a/package.json
+++ b/package.json
@@ -64,7 +64,11 @@
         "packages/*"
     ],
     "dependencies": {
+        "@fastify/cors": "^9.0.1",
+        "@fastify/formbody": "^7.4.0",
+        "@fastify/static": "^7.0.3",
         "@fastify/url-data": "^5.4.0",
+        "fastify-oas": "^3.0.8",
         "husky": "^8.0.3",
         "ilp-packet": "^2.2.0"
     },
