--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -35,7 +35,7 @@
         "standard": "npm run lint",
         "lint": "eslint ./src",
         "lint:fix": "eslint ./src --fix",
-        "test:unit": "jest --passWithNoTests --testMatch **/test/unit/routes/bulkQuote_routes.test.ts --runInBand",
+        "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts --runInBand",
         "test:ttk-use-cases": "npx ml-ttk-cli --mode outbound --input-files=./api-specs/working_paths.json --environment-file ./api-specs/examples_environments_hub_local_environment.json --report-format html",
         "audit:resolve": "SHELL=sh resolve-audit",
         "audit:check": "SHELL=sh check-audit",
@@ -62,8 +62,6 @@
         "ajv": "^8.12.0",
         "axios": "^1.4.0",
         "base64url": "^3.0.1",
-        "express": "~4.18.3",
-        "express-openapi-validate": "^0.6.1",
         "fastify": "^4.26.2",
         "fastify-formbody": "^5.3.0",
         "fastify-oas": "^3.0.8",
@@ -71,7 +69,6 @@
         "js-yaml": "^4.1.0"
     },
     "devDependencies": {
-        "@types/express": "~4.17.21",
         "@types/js-yaml": "^4.0.9",
         "@types/node": "^20.11.27",
         "@types/supertest": "^2.0.16",
