--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -65,6 +65,7 @@
         "ajv": "^8.12.0",
         "axios": "^1.4.0",
         "base64url": "^3.0.1",
+        "express-prom-bundle": "^7.0.0",
         "fastify": "^4.26.2",
         "fastify-formbody": "^5.3.0",
         "fastify-plugin": "^4.5.1",
