--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -61,20 +61,20 @@
         "@mojaloop/platform-configuration-bc-public-types-lib": "~0.5.2",
         "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.5.7",
         "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.5.11",
-        "@mojaloop/platform-shared-lib-observability-client-lib": "~0.5.2",
-        "@mojaloop/platform-shared-lib-observability-types-lib": "~0.5.3",
         "@mojaloop/platform-shared-lib-public-messages-lib": "~0.5.15",
         "@mojaloop/quoting-bc-public-types-lib": "~0.5.1",
         "@mojaloop/security-bc-client-lib": "~0.5.10",
         "@mojaloop/security-bc-public-types-lib": "~0.5.6",
         "@mojaloop/transfers-bc-public-types-lib": "~0.5.3",
+        "@mojaloop/platform-shared-lib-observability-types-lib": "~0.5.4",
+        "@mojaloop/platform-shared-lib-observability-client-lib": "~0.5.3",
         "ajv": "^8.12.0",
         "axios": "^1.4.0",
         "base64url": "^3.0.1",
-        "fastify": "^4.26.2",
-        "fastify-metrics": "^11.0.0",
-        "fastify-plugin": "^4.5.1",
-        "js-yaml": "^4.1.0",
+        "fastify": "~4.26.2",
+        "fastify-metrics": "~11.0.0",
+        "fastify-plugin": "~4.5.1",
+        "js-yaml": "~4.1.0",
         "prom-client": "~14.2.0"
     },
     "devDependencies": {
