--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mojaloop/interop-apis-bc-fspiop-api-svc",
-    "version": "0.6.3",
+    "version": "0.6.4",
     "description": "Mojaloop vNext FSPIOP API Service",
     "license": "Apache-2.0",
     "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/packages/fspiop-api-svc",
@@ -43,31 +43,32 @@
         "dep:update": "ncu -e 2 -u"
     },
     "dependencies": {
+        "@mojaloop/interop-apis-bc-fspiop-utils-lib": "*",
         "@fastify/cors": "^9.0.1",
         "@fastify/formbody": "^7.4.0",
-        "@fastify/static": "^7.0.3",
+        "@fastify/static": "^7.0.4",
         "@fastify/swagger": "^8.14.0",
         "@fastify/under-pressure": "^8.3.0",
         "@fastify/url-data": "^5.4.0",
         "@mojaloop/account-lookup-bc-public-types-lib": "~0.5.2",
-        "@mojaloop/auditing-bc-client-lib": "~0.5.2",
+        "@mojaloop/auditing-bc-client-lib": "~0.5.3",
         "@mojaloop/auditing-bc-public-types-lib": "~0.5.2",
-        "@mojaloop/interop-apis-bc-fspiop-utils-lib": "*",
-        "@mojaloop/logging-bc-client-lib": "~0.5.7",
+        "@mojaloop/logging-bc-client-lib": "~0.5.8",
         "@mojaloop/logging-bc-public-types-lib": "~0.5.4",
-        "@mojaloop/participant-bc-public-types-lib": "~0.5.4",
-        "@mojaloop/participants-bc-client-lib": "~0.5.4",
+        "@mojaloop/participant-bc-public-types-lib": "~0.5.5",
+        "@mojaloop/participants-bc-client-lib": "~0.5.5",
         "@mojaloop/platform-configuration-bc-client-lib": "~0.5.7",
         "@mojaloop/platform-configuration-bc-public-types-lib": "~0.5.2",
         "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.6.2",
-        "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.5.15",
+        "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.5.18",
         "@mojaloop/platform-shared-lib-public-messages-lib": "~0.5.20",
-        "@mojaloop/quoting-bc-public-types-lib": "~0.5.6",
-        "@mojaloop/security-bc-client-lib": "~0.5.11",
+        "@mojaloop/quoting-bc-public-types-lib": "~0.5.8",
+        "@mojaloop/security-bc-client-lib": "~0.5.12",
         "@mojaloop/security-bc-public-types-lib": "~0.5.6",
         "@mojaloop/transfers-bc-public-types-lib": "~0.5.3",
-        "@mojaloop/platform-shared-lib-observability-types-lib": "~0.5.4",
-        "@mojaloop/platform-shared-lib-observability-client-lib": "~0.5.4",
+        "@mojaloop/platform-shared-lib-observability-types-lib": "~0.5.5",
+        "@mojaloop/platform-shared-lib-observability-client-lib": "~0.5.7",
+        "@opentelemetry/api": "~1.8.0",
         "ajv": "^8.12.0",
         "axios": "^1.4.0",
         "base64url": "^3.0.1",
